# hypersonic-reentry-pdtc

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  ControlInputs.h  DescentDynamics.cpp  DescentDynamics.h  PlanetConfig.h  README.md  SpacecraftConfig.h  dynamics.cpp  dynamics.h  main.cpp  vcpkg.json
.github/workflows/: ci.yml
aero/: AeroAngles.cpp  AeroAngles.h  AeroCoefficientTable.cpp  AeroCoefficientTable.h  AeroRegimeDispatch.cpp  AeroRegimeDispatch.h  FlapHingeData.h  GenerateAeroTable.cpp  GenerateDeflectedGeometry.cpp  Kriging.cpp  Kriging.h  LatinHypercubeSampler.cpp  LatinHypercubeSampler.h  NewtonianAero.cpp  NewtonianAero.h  PanelGeometry.cpp  PanelGeometry.h  ShockExpansionAero.cpp  ShockExpansionAero.h  SpacecraftGeometry.cpp  SpacecraftGeometry.h  StlMeshLoader.cpp  StlMeshLoader.h  TestBodyGenerator.h
aero/data/: aero_table.csv  doe_points.csv  reference_quantities.csv
atmosphere/: AtmosphereModel.cpp  AtmosphereModel.h
attitude/: QuaternionUtils.cpp  QuaternionUtils.h
dynamics/: DescentDynamics.cpp  DescentDynamics.h
geometry/: Spacecraft Assembly - Spacecraft Body-1.STL  Spacecraft Assembly.SLDASM  Spacecraft Body.SLDPRT  Spacecraft Flap 1.STL  Spacecraft Flap 2.STL  Spacecraft Flap 3.STL  Spacecraft Flap 4.STL
guidance_scp/: ClarabelSocpSolver.cpp  ClarabelSocpSolver.h  FiniteDifferenceJacobian.cpp  FiniteDifferenceJacobian.h  FullLoopDemoMain.cpp  StageDemoMain.cpp  TrimSolver.cpp  TrimSolver.h  full_loop_nonconvex.cpp  full_loop_nonconvex.h  full_loop_path_constraints.cpp  full_loop_path_constraints.h  full_loop_phase1.cpp  full_loop_phase1.h  full_loop_phase2.cpp  full_loop_phase2.h  full_loop_subproblem.cpp  full_loop_subproblem.h  full_loop_transition.cpp  full_loop_transition.h  full_scp_loop.cpp  full_scp_loop.h  reference_stage_a.cpp  reference_stage_a.h  reference_stage_b.cpp  reference_stage_b.h
loads/: GuidanceConstraints.h  HeatingLoadModel.cpp  HeatingLoadModel.h
planet/: PlanetConfig.cpp  PlanetConfig.h
spacecraft/: FlapActuatorConfig.h  GimbalActuatorConfig.h  SpacecraftConfig.h
tests/: AeroTests.cpp  AtmosphereModelTests.cpp  DynamicsTests.cpp  FullLoopIntegrationTests.cpp  FullLoopNonconvexTests.cpp  FullLoopPhase1Tests.cpp  FullLoopPhase2Tests.cpp  FullLoopSubproblemTests.cpp  GuidanceScpTests.cpp  HeatingLoadModelTests.cpp
tests/fixtures/: aero_table_test.csv
